--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 	strong, b
 	{
 		font-weight: bold;
-		color: #000000;
+		color: #298720;
 	}
 	
 	em, i
@@ -281,7 +281,7 @@
 			.button:hover
 			{
 				background: #de3d27;
-				color: #FFF !important;
+				color: #2C422A;
 			}
 			
 /*********************************************************************************/
@@ -316,7 +316,7 @@
 	{
 		position: relative;
 		background: #333;
-		color: #fff;
+		color: #2C422A;
 	}
 
 /*********************************************************************************/
@@ -326,7 +326,7 @@
 	#main
 	{
 		position: relative;
-		background: #fff;
+		background: #32D423;
 	}
 
 /*********************************************************************************/
